--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,144 @@
-body {
+/* Remove browser defaults */
+* {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Roboto', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Style App.js wrapper */
+.App {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+/* Tab Container */
+.Tabs {
+  position: relative;
+  top: 0;
+  width: 100%;
+  height: auto;
+}
+
+/* Tab Navigation */
+ul.nav {
+  background-color: rgb(252, 248, 248);
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 3px solid rgb(206, 206, 206);
+}
+
+li {
+  list-style: none;
+}
+
+ul.nav li {
+  position: relative;
+  width: 20%;
+  font-size: 22px;
+  padding: 1rem;
+  text-align: center;
+  cursor: pointer;
+}
+
+ul.nav li:hover {
+  box-shadow: 5px 5px 50px 5px rgba(0, 0, 0, 0.1) inset;
+}
+
+ul.nav li::after {
+  z-index: 2;
+  width: 100%;
+  position: absolute;
+  content: '';
+  transform: scaleX(0);
+  height: 3px;
+  bottom: -2px;
+  left: 0;
+  background-color: #0dd4ee;
+  transform-origin: bottom right;
+  transition: transform 0.3s ease-out;
+}
+
+ul.nav li.active:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.tab_content {
+  background-color: #e9e9e9;
+  padding: 20px;
+}
+
+h1 {
+  text-align: center;
+  margin: auto;
+  font-size: 22px;
+  letter-spacing: 1px;
+}
+
+h3 {
+  font-weight: 100;
+  font-size: 16px;
+  padding: 5px 0 20px;
+}
+
+.user_details {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: baseline;
+}
+
+.user_details>div {
+  flex: 50%;
+  margin-bottom: 10px;
+}
+
+input {
+  display: block;
+  margin-top: 5px;
+  padding: 5px 10px;
+}
+
+.user_details input {
+  width: 70%;
+}
+
+input[type="radio"] {
+  display: inline-block;
+  margin-right: 5px;
+}
+
+input[name="phone"] {
+  width: 30%;
+}
+
+.radio_inputs {
+  width: 50%;
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
+}
+
+.radio_inputs li {
+  margin-right: auto;
+  cursor: pointer;
+}
+
+.form {
+  background-color: #fcf9f9;
+  border-radius: 10px;
+  padding: 50px;
+}
+
+.feedback>div {
+  margin: 20px 0;
 }
