--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,12 @@
 
 /* Style App.js wrapper */
 .App {
+  height: 100vh;
   width: 100%;
   display: flex;
-  align-items: center;
   justify-content: center;
   overflow: hidden;
+  background-color: #e9e9e9;
 }
 
 /* Tab Container */
@@ -20,7 +21,6 @@
   position: relative;
   top: 0;
   width: 100%;
-  height: auto;
 }
 
 /* Tab Navigation */
@@ -70,18 +70,18 @@ ul.nav li.active:after {
 }
 
 .tab_content {
-  background-color: #e9e9e9;
   padding: 20px;
 }
 
 h1 {
-  text-align: center;
+  color: #1062dd;
   margin: auto;
   font-size: 22px;
   letter-spacing: 1px;
 }
 
 h3 {
+  color: rgb(94, 93, 93);
   font-weight: 100;
   font-size: 16px;
   padding: 5px 0 20px;
@@ -98,7 +98,9 @@ h3 {
 
 .user_details>div {
   flex: 50%;
-  margin-bottom: 10px;
+}
+.user_details>div:not(:last-child) {
+  margin-bottom: 20px;
 }
 
 input {
@@ -109,6 +111,14 @@ input {
 
 .user_details input {
   width: 70%;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 0px 2px 1px rgb(214, 214, 214);
+}
+
+.user_details input:focus {
+  outline: none;
+  box-shadow: 0px 1px 2px 1px rgb(127, 146, 168);
 }
 
 input[type="radio"] {
@@ -126,6 +136,7 @@ input[name="phone"] {
   display: flex;
   justify-content: flex-start;
   align-items: baseline;
+  margin-top: 5px;
 }
 
 .radio_inputs li {
@@ -135,8 +146,8 @@ input[name="phone"] {
 
 .form {
   background-color: #fcf9f9;
-  border-radius: 10px;
-  padding: 50px;
+  border-radius: 5px;
+  padding: 30px;
 }
 
 .feedback>div {
