--- a/src/index.css
+++ b/src/index.css
@@ -150,6 +150,14 @@ input[name="phone"] {
   padding: 30px;
 }
 
+.form span {
+  color: red;
+}
+
 .feedback>div {
   margin: 20px 0;
+}
+
+.error {
+  box-shadow: 0px 0px 2px 1px rgb(247, 64, 64);
 }
