Updated Index CSS

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* form Tab styling is separated in form.css */
+
 /* Remove browser defaults */
 * {
   box-sizing: border-box;
@@ -87,64 +89,8 @@ h3 {
   padding: 5px 0 20px;
 }
 
-.user_details {
-  position: relative;
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: baseline;
-}
-
-.user_details>div {
-  flex: 50%;
-}
-.user_details>div:not(:last-child) {
-  margin-bottom: 20px;
-}
-
-input {
-  display: block;
-  margin-top: 5px;
-  padding: 5px 10px;
-}
-
-.user_details input {
-  width: 70%;
-  border: none;
-  border-radius: 4px;
-  box-shadow: 0px 0px 2px 1px rgb(214, 214, 214);
-}
-
-.user_details input:focus {
-  outline: none;
-  box-shadow: 0px 1px 2px 1px rgb(127, 146, 168);
-}
-
-input[type="radio"] {
-  display: inline-block;
-  margin-right: 5px;
-}
-
-input[name="phone"] {
-  width: 30%;
-}
-
-.radio_inputs {
-  width: 50%;
-  position: relative;
-  display: flex;
-  justify-content: flex-start;
-  align-items: baseline;
-  margin-top: 5px;
-}
-
-.radio_inputs li {
-  margin-right: auto;
-  cursor: pointer;
-}
-
-.form, table {
+/* below is the Table Tab and its content styling */
+table {
   background-color: #fcf9f9;
   box-shadow: 0px 1px 5px 1px rgb(196, 196, 196);
   border-radius: 5px;
@@ -152,9 +98,16 @@ input[name="phone"] {
 }
 
 table {
+  position: relative;
   width: 100%;
   border-collapse: collapse;
   margin-top: 20px;
+}
+
+th {
+  max-width: 1px;
+  white-space: nowrap; text-overflow:ellipsis; overflow: hidden;
+  font-size: calc(14px + 0.3vw);
 }
 
 td, th {
@@ -178,21 +131,6 @@ th {
   color: white;
 }
 
-.form span {
-  color: red;
-}
-
-.form button {
-  letter-spacing: 1px;
-  cursor: pointer;
-  border: none;
-  border-radius: 5px;
-  background-color: #0dc916;
-  color: #fafafa;
-  font-size: 18px;
-  padding: 10px 20px;
-}
-
 .table_component button {
   letter-spacing: 1px;
   cursor: pointer;
@@ -210,19 +148,4 @@ th {
 
 .table_component button:hover {
   box-shadow: 0px 0px 50px 1px inset #d8270f;
-}
-.form button:hover {
-  box-shadow: 0px 0px 50px 1px inset #02f70e80;
-}
-
-.feedback {
-  padding: 10px 0;
-}
-
-.feedback>div {
-  margin: 20px 0;
-}
-
-.error {
-  box-shadow: 0px 0px 2px 1px rgb(247, 64, 64);
 }
